Fix home navbar init on GH Pages: expose setupHomeNavbar and run once after injection; center logo

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ body.policies .highlight {
   text-align: center;
   padding: 0;
   position: absolute;
-  left: calc(50% + 200px);
+  left: 50%;
   transform: translateX(-50%);
 }
 
