--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="py-3 bg-dark" aria-label="Footer">
     <div class="container py-2 px-sm-0">
         <div class="row align-items-center">
-            <div class="col-6 footer-column">
+            <div class="col-6 footer-column footer-col-links">
                 <div class="row">
                     <div class="col-4">
                         <h5>Bloom'n</h5>
@@ -30,10 +30,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 text-center footer-column">
+            <div class="col-3 text-center footer-column footer-col-logo">
                 <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo" loading="lazy" decoding="async">
             </div>
-            <div class="col-3 footer-column text-center">
+            <div class="col-3 footer-column text-center footer-col-cta">
                 <h5>Ready to Create Something Amazing?</h5>
                 <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
                 <a href="contact.html" class="btn btn-gold">Get in Touch</a>
