--- a/partials/navbar-home.html
+++ b/partials/navbar-home.html
@@ -1,4 +1,4 @@
-<nav id="homeNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom" aria-label="Primary">
+<nav id="homeNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom" aria-label="Primary" style="position:fixed;bottom:0;left:0;right:0;">
     <div class="container">
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
