--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,7 +1,8 @@
 <footer class="py-3 bg-dark" aria-label="Footer">
     <div class="container py-2 px-sm-0">
         <div class="row align-items-center">
-            <div class="col-6 footer-column footer-col-links">
+            <!-- All Links on Left -->
+            <div class="col-6 footer-column">
                 <div class="row">
                     <div class="col-4">
                         <h5>Bloom'n</h5>
@@ -30,6 +31,7 @@
                     </div>
                 </div>
             </div>
+            
             <!-- Logo in Center -->
             <div class="col-3 text-center footer-column order-md-2">
                 <img src="images/logo-blk.png" alt="Bloom'n Events Co Logo" class="img-fluid footer-logo mb-3" loading="lazy" decoding="async">
@@ -37,6 +39,7 @@
                     Copyright &copy; <span id="current-year"></span> Bloom'n Events Co Pty Ltd. All rights reserved.
                 </p>
             </div>
+            
             <!-- Call to Action and Social Media on Right -->
             <div class="col-3 footer-column text-center order-md-3">
                 <h5 class="mt-3">Ready to Create Something Amazing?</h5>
